Add extra tips and exercises for using demonstratives in English

--- a/01.md
+++ b/01.md
@@ -50,19 +50,35 @@ Usado para falar sobre **coisas no plural que estão longe**.
 
 ---
 
+📝 **Dica Extra**:
+- Se puder **tocar** no objeto, use **"this" (singular) ou "these" (plural)**.
+- Se o objeto estiver **longe**, use **"that" (singular) ou "those" (plural)**.
+
+---
+
 ## 🎯 **Exercícios de Fixação**
 
 1️⃣ Complete com **"this"** ou **"that"**:
    - ___ car is very fast.
    - ___ coffee is cold.
    - ___ is my dog.
-   - ___ house is big.
-
+   - ___ house is big.  
+    
+   
+```That``` car is very fast.
+```This``` coffee is cold.
+```This``` is my dog.
+```That``` house is big.
+  
 2️⃣ Complete com **"these"** ou **"those"**:
    - ___ shoes are expensive.
    - ___ flowers are beautiful.
    - ___ books are mine.
    - ___ apples are not fresh.
+  
+```Those``` shoes are expensive.
+```These``` flowers are beautiful.
+```Those``` apples are not fresh.
 
 3️⃣ Traduza para o inglês:
    - Este celular é novo.  
@@ -70,10 +86,37 @@ Usado para falar sobre **coisas no plural que estão longe**.
    - Estas cadeiras são confortáveis.  
    - Aqueles prédios são antigos.
 
+```This``` phone is new.
+```That``` car is mine.
+```These``` chairs are comfortable.
+```Those``` buildings are old.  
+
 ---
 
-📝 **Dica Extra**:
-- Se puder **tocar** no objeto, use **"this" (singular) ou "these" (plural)**.
-- Se o objeto estiver **longe**, use **"that" (singular) ou "those" (plural)**.
+🏠 Exercício Extra: Descrevendo um Quarto ou Sala
+✏️ Instrução: Escolha um cômodo da sua casa e descreva os objetos que estão nele usando "this", "that", "these" e "those".
 
-🚀 **Pratique criando suas próprias frases!**
+```markdown
+This bed is very comfortable.  
+That wardrobe is old.  
+These pillows are soft.  
+Those chairs are in the kitchen.  
+```
+
+🎨 Exercício de Reading: Descrição de um Quadro no Museu
+📖 Leia o texto abaixo e responda às perguntas:
+
+I am in a museum, looking at a beautiful painting. This painting is very large and colorful.  
+There is a woman in the center of the painting, wearing a red dress.  
+That man on the left is playing a guitar. These flowers in the background are blue and yellow.  
+Those people in the background are dancing. I love this painting!  
+
+Perguntas: 1️⃣ What color is the woman's dress?
+2️⃣ What is the man on the left doing?
+3️⃣ What colors are the flowers in the background?
+4️⃣ What are the people in the background doing?
+
+1️⃣ The woman's dress is red.
+2️⃣ The man on the left is playing a guitar.
+3️⃣ The flowers in the background are blue and yellow.
+4️⃣ The people in the background are dancing.
