Add section on "Which" and "Who" in relative pronouns lesson

--- a/02.md
+++ b/02.md
@@ -16,7 +16,8 @@ Usado para introduzir **informações essenciais** sobre algo ou alguém.
 - The book ```that``` I am reading is very interesting.
 - The house ```that``` we bought is very old.
 - The car ```that``` broke down is mine.
-➜ "Which" (O qual, Que)
+  
+### ➜ **"Which"** (O qual, Que)
 Usado para adicionar uma informação extra, que pode ser removida da frase sem alterar o significado principal.
 💡 Importante: Geralmente aparece entre vírgulas.
 
@@ -27,14 +28,14 @@ The Eiffel Tower, ___ is in Paris, is very famous.
 This book, ___ was written by a famous author, is a bestseller.
 ✅ Respostas Exemplos:
 
-markdown
-Copy
-Edit
+```
 - My car, ```which``` is very old, needs a new engine.
 - The Eiffel Tower, ```which``` is in Paris, is very famous.
 - This book, ```which``` was written by a famous author, is a bestseller.
 🔹 2. "Who" vs. "Whom"
-➜ "Who" (Quem, Que)
+```
+
+### ➜ **"Who"** (Quem, Que)
 Usado para se referir a pessoas e funciona como sujeito da frase.
 
 ✅ Exemplos:
