Refine lessons on relative pronouns: added examples for "who," "whom," "where," "when," and "whose"

--- a/02.md
+++ b/02.md
@@ -45,13 +45,14 @@ The man ___ called you is my father.
 The teacher ___ teaches math is very kind.
 ✅ Respostas Exemplos:
 
-markdown
-Copy
-Edit
+```
 - She is the engineer ```who``` designed the bridge.
 - The man ```who``` called you is my father.
 - The teacher ```who``` teaches math is very kind.
-➜ "Whom" (Quem, A quem)
+```
+
+### ➜ **"Whom"** (Quem, A quem)
+
 Usado para se referir a pessoas, mas funciona como objeto da frase.
 
 ✅ Exemplos:
@@ -61,14 +62,14 @@ She is the doctor ___ everyone trusts.
 The student ___ I helped passed the test.
 ✅ Respostas Exemplos:
 
-markdown
-Copy
-Edit
+```
 - The professor ```whom``` I admire is retiring.
 - She is the doctor ```whom``` everyone trusts.
 - The student ```whom``` I helped passed the test.
 🔹 3. "Where", "When" e "Whose"
-➜ "Where" (Onde)
+```
+
+### ➜ **"Where"** (Onde)
 Usado para indicar lugares.
 
 ✅ Exemplos:
@@ -78,13 +79,13 @@ The house ___ he lives is very big.
 Do you remember the restaurant ___ we ate last night?
 ✅ Respostas Exemplos:
 
-markdown
-Copy
-Edit
+```
 - This is the city ```where``` I was born.
 - The house ```where``` he lives is very big.
 - Do you remember the restaurant ```where``` we ate last night?
-➜ "When" (Quando)
+```
+  
+### ➜ **"When"** (Quando)
 Usado para indicar tempo.
 
 ✅ Exemplos:
@@ -94,13 +95,13 @@ Do you remember the day ___ we met?
 Summer is the season ___ I travel the most.
 ✅ Respostas Exemplos:
 
-markdown
-Copy
-Edit
+```
 - 1999 was the year ```when``` I moved to Brazil.
 - Do you remember the day ```when``` we met?
-- Summer is the season ```when``` I travel the most.
-➜ "Whose" (Cujo/Cuja)
+- Summer is the season ```when``` I travel the most.`
+```
+
+### ➜ **"Whose"** (Cujo/Cuja)
 Usado para indicar posse.
 
 ✅ Exemplos:
@@ -110,12 +111,12 @@ The man ___ car is parked outside is my neighbor.
 The teacher ___ students won the competition is very proud.
 ✅ Respostas Exemplos:
 
-markdown
-Copy
-Edit
+```
 - She is the girl ```whose``` dog is missing.
 - The man ```whose``` car is parked outside is my neighbor.
-- The teacher ```whose``` students won the competition is very proud.
+- The teacher ```whose``` students won the competition is very proud.`
+```
+
 📝 Dica Extra – Como Melhorar seu Uso
 
 Use "who" para pessoas como sujeito (The teacher who teaches math is very kind.).
@@ -124,59 +125,60 @@ Use "which" para informações extras (My car, which is very old, needs a new en
 Use "whose" para indicar posse (She is the girl whose dog is missing.).
 Use "where" para lugares (This is the city where I was born.).
 Use "when" para tempos específicos (1999 was the year when I moved to Brazil.).
+
 🎯 Exercícios de Fixação
 1️⃣ Complete com "that" ou "which":
 
-markdown
-Copy
-Edit
+```
 - The house ```that``` we bought is in a great neighborhood.
 - My phone, ```which``` is very old, still works perfectly.
+```
+
 2️⃣ Complete com "who" ou "whom":
 
-markdown
-Copy
-Edit
+```
 - The scientist ```who``` discovered this formula won a Nobel Prize.
 - The person ```whom``` you met at the party is my cousin.
+```
+
 3️⃣ Complete com "where", "when" ou "whose":
 
-markdown
-Copy
-Edit
+```
 - The city ```where``` I grew up is very small.
 - The year ```when``` I graduated was 2010.
 - The girl ```whose``` backpack was lost is crying.
+```
+
 🏠 Exercício Extra: Descrevendo um Lugar ✏️ Instrução: Escolha um lugar e descreva algo sobre ele.
 
-markdown
-Copy
-Edit
+```
 The house ```where``` I was born is very old.  
 The summer ```when``` we traveled to Italy was amazing.  
 The boy ```whose``` dog is lost is very sad.  
+```
+
 🎨 Exercício de Reading: Descrição de um Castelo
 
 📖 Leia o texto abaixo e responda às perguntas:
 
-markdown
-Copy
-Edit
+```
 I visited a castle last summer. The castle, which is over 500 years old, has a beautiful garden.  
 There was a king who ruled the land many years ago. The hall where the king used to hold meetings is very large.  
 The guide, whom we met at the entrance, told us many interesting stories.  
 The queen, whose jewelry is now in a museum, loved this place.  
-✅ Perguntas: 1️⃣ How old is the castle?
+```
+
+✅ Perguntas: 
+1️⃣ How old is the castle?
 2️⃣ Who ruled the land many years ago?
 3️⃣ Where did the king hold meetings?
 4️⃣ Who did the visitors meet at the entrance?
 
 ✅ Respostas:
 
-markdown
-Copy
-Edit
+```
 1️⃣ The castle is over 500 years old.
 2️⃣ A king ruled the land many years ago.
 3️⃣ The king held meetings in the hall.
 4️⃣ The visitors met the guide at the entrance.
+```
